lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_key_lib/esl_key_lib.h


typedef struct db_handle_s *db_handle_p;
typedef struct db_record_s *db_record_p;
typedef enum {
  ESL_KEY_LIB_INVALID_RECORD = 0, 
  ESL_KEY_LIB_AP_RECORD,
  ESL_KEY_LIB_TAG_RECORD
} esl_key_lib_record_type_t;
sl_status_t DLL_EXPORT esl_key_lib_set_identity_key(const aes_key_128 *id_key,
                                                    db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_set_ap_key_material(const sl_bt_ead_key_material_p ap_key,
                                                       db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_set_response_key_material(const sl_bt_ead_key_material_p response_key,
                                                             db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_get_record_type(const db_record_p record_hnd,
                                                   esl_key_lib_record_type_t *type_out);
sl_status_t DLL_EXPORT esl_key_lib_get_ble_address(const db_record_p record_hnd,
                                                   bd_addr *addr_out);
sl_status_t DLL_EXPORT esl_key_lib_get_esl_address(const db_record_p record_hnd,
                                                   esl_address_t *addr_out);
sl_status_t DLL_EXPORT esl_key_lib_get_bind_address(const db_handle_p db_hnd,
                                                    const db_record_p record_hnd,
                                                    bd_addr *addr_out);
sl_status_t DLL_EXPORT esl_key_lib_get_long_term_key(const db_record_p record_hnd,
                                                     aes_key_128 *ltk_key_out);
sl_status_t DLL_EXPORT esl_key_lib_get_identity_key(const db_record_p record_hnd,
                                                    aes_key_128 *id_key_out);
sl_status_t DLL_EXPORT esl_key_lib_get_ap_key_material(const db_record_p record_hnd,
                                                       sl_bt_ead_key_material_p ap_key_out);
sl_status_t DLL_EXPORT esl_key_lib_get_response_key_material(const db_record_p record_hnd,
                                                             sl_bt_ead_key_material_p response_key_out);
sl_status_t DLL_EXPORT esl_key_lib_delete_record_by_ble_address(const db_handle_p db_hnd,
                                                                const bd_addr *ble_address);
sl_status_t DLL_EXPORT esl_key_lib_delete_record_by_esl_address(const db_handle_p db_hnd,
                                                                const esl_address_t esl_address);
sl_status_t DLL_EXPORT esl_key_lib_get_bind_address_by_ble_address(const db_handle_p db_hnd,
                                                                   const bd_addr *ble_address,
                                                                   bd_addr *bind_addr_out);
sl_status_t DLL_EXPORT esl_key_lib_get_bind_address_by_esl_address(const db_handle_p db_hnd,
                                                                   const esl_address_t esl_address,
                                                                   bd_addr *bind_addr_out);