lib/wiseconnect_new/components/device/stm32/silabs_utility/common/inc/sl_status.h


#define SL_STATUS_SPACE_MASK              ((sl_status_t)0xFF00)
#define SL_STATUS_GENERIC_SPACE           ((sl_status_t)0x0000)
#define SL_STATUS_PLATFORM_1_SPACE        ((sl_status_t)0x0100)
#define SL_STATUS_PLATFORM_2_SPACE        ((sl_status_t)0x0200)
#define SL_STATUS_HARDWARE_SPACE          ((sl_status_t)0x0300)
#define SL_STATUS_BLUETOOTH_SPACE         ((sl_status_t)0x0400)
#define SL_STATUS_BLUETOOTH_MESH_SPACE    ((sl_status_t)0x0500)
#define SL_STATUS_CAN_CANOPEN_SPACE       ((sl_status_t)0x0600)
#define SL_STATUS_CONNECT_SPACE           ((sl_status_t)0x0700)
#define SL_STATUS_NET_SUITE_SPACE         ((sl_status_t)0x0800)
#define SL_STATUS_THREAD_SPACE            ((sl_status_t)0x0900)
#define SL_STATUS_USB_SPACE               ((sl_status_t)0x0A00)
#define SL_STATUS_WIFI_SPACE              ((sl_status_t)0x0B00)
#define SL_STATUS_ZIGBEE_SPACE            ((sl_status_t)0x0C00)
#define SL_STATUS_Z_WAVE_SPACE            ((sl_status_t)0x0D00)
#define SL_STATUS_GECKO_OS_1_SPACE        ((sl_status_t)0x0E00)
#define SL_STATUS_GECKO_OS_2_SPACE        ((sl_status_t)0x0F00)
#define SL_STATUS_BLUETOOTH_CTRL_SPACE    ((sl_status_t)0x1000)
#define SL_STATUS_BLUETOOTH_ATT_SPACE     ((sl_status_t)0x1100)
#define SL_STATUS_BLUETOOTH_SMP_SPACE     ((sl_status_t)0x1200)
#define SL_STATUS_BLUETOOTH_MESH_FOUNDATION_SPACE     ((sl_status_t)0x1300)
#define SL_STATUS_WISUN_SPACE             ((sl_status_t)0x1400)
#define SL_STATUS_COMPUTE_SPACE           ((sl_status_t)0x1500)
#define SL_STATUS_OK    ((sl_status_t)0x0000)  
#define SL_STATUS_FAIL  ((sl_status_t)0x0001)  
#define SL_STATUS_INVALID_STATE         ((sl_status_t)0x0002)  
#define SL_STATUS_NOT_READY             ((sl_status_t)0x0003)  
#define SL_STATUS_BUSY                  ((sl_status_t)0x0004)  
#define SL_STATUS_IN_PROGRESS           ((sl_status_t)0x0005)  
#define SL_STATUS_ABORT                 ((sl_status_t)0x0006)  
#define SL_STATUS_TIMEOUT               ((sl_status_t)0x0007)  
#define SL_STATUS_PERMISSION            ((sl_status_t)0x0008)  
#define SL_STATUS_WOULD_BLOCK           ((sl_status_t)0x0009)  
#define SL_STATUS_IDLE                  ((sl_status_t)0x000A)  
#define SL_STATUS_IS_WAITING            ((sl_status_t)0x000B)  
#define SL_STATUS_NONE_WAITING          ((sl_status_t)0x000C)  
#define SL_STATUS_SUSPENDED             ((sl_status_t)0x000D)  
#define SL_STATUS_NOT_AVAILABLE         ((sl_status_t)0x000E)  
#define SL_STATUS_NOT_SUPPORTED         ((sl_status_t)0x000F)  
#define SL_STATUS_INITIALIZATION        ((sl_status_t)0x0010)  
#define SL_STATUS_NOT_INITIALIZED       ((sl_status_t)0x0011)  
#define SL_STATUS_ALREADY_INITIALIZED   ((sl_status_t)0x0012)  
#define SL_STATUS_DELETED               ((sl_status_t)0x0013)  
#define SL_STATUS_ISR                   ((sl_status_t)0x0014)  
#define SL_STATUS_NETWORK_UP            ((sl_status_t)0x0015)  
#define SL_STATUS_NETWORK_DOWN          ((sl_status_t)0x0016)  
#define SL_STATUS_NOT_JOINED            ((sl_status_t)0x0017)  
#define SL_STATUS_NO_BEACONS            ((sl_status_t)0x0018)  
#define SL_STATUS_ALLOCATION_FAILED   ((sl_status_t)0x0019)  
#define SL_STATUS_NO_MORE_RESOURCE    ((sl_status_t)0x001A)  
#define SL_STATUS_EMPTY               ((sl_status_t)0x001B)  
#define SL_STATUS_FULL                ((sl_status_t)0x001C)  
#define SL_STATUS_WOULD_OVERFLOW      ((sl_status_t)0x001D)  
#define SL_STATUS_HAS_OVERFLOWED      ((sl_status_t)0x001E)  
#define SL_STATUS_OWNERSHIP           ((sl_status_t)0x001F)  
typedef uint32_t sl_status_t;