lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_key_lib_wrapper.py


# esl_key_lib.h: 311
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_identity_key", "cdecl"):
        continue
    esl_key_lib_set_identity_key = _lib.get("esl_key_lib_set_identity_key", "cdecl")
    esl_key_lib_set_identity_key.argtypes = [POINTER(aes_key_128), db_record_p]
    esl_key_lib_set_identity_key.restype = sl_status_t
    break

# esl_key_lib.h: 324
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_ap_key_material", "cdecl"):
        continue
    esl_key_lib_set_ap_key_material = _lib.get("esl_key_lib_set_ap_key_material", "cdecl")
    esl_key_lib_set_ap_key_material.argtypes = [sl_bt_ead_key_material_p, db_record_p]
    esl_key_lib_set_ap_key_material.restype = sl_status_t
    break

# esl_key_lib.h: 337
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_response_key_material", "cdecl"):
        continue
    esl_key_lib_set_response_key_material = _lib.get("esl_key_lib_set_response_key_material", "cdecl")
    esl_key_lib_set_response_key_material.argtypes = [sl_bt_ead_key_material_p, db_record_p]
    esl_key_lib_set_response_key_material.restype = sl_status_t
    break

# esl_key_lib.h: 351
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_record_type", "cdecl"):
        continue
    esl_key_lib_get_record_type = _lib.get("esl_key_lib_get_record_type", "cdecl")
    esl_key_lib_get_record_type.argtypes = [db_record_p, POINTER(esl_key_lib_record_type_t)]
    esl_key_lib_get_record_type.restype = sl_status_t
    break

# esl_key_lib.h: 363
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_ble_address", "cdecl"):
        continue
    esl_key_lib_get_ble_address = _lib.get("esl_key_lib_get_ble_address", "cdecl")
    esl_key_lib_get_ble_address.argtypes = [db_record_p, POINTER(bd_addr)]
    esl_key_lib_get_ble_address.restype = sl_status_t
    break

# esl_key_lib.h: 376
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_esl_address", "cdecl"):
        continue
    esl_key_lib_get_esl_address = _lib.get("esl_key_lib_get_esl_address", "cdecl")
    esl_key_lib_get_esl_address.argtypes = [db_record_p, POINTER(esl_address_t)]
    esl_key_lib_get_esl_address.restype = sl_status_t
    break

# esl_key_lib.h: 391
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_bind_address", "cdecl"):
        continue
    esl_key_lib_get_bind_address = _lib.get("esl_key_lib_get_bind_address", "cdecl")
    esl_key_lib_get_bind_address.argtypes = [db_handle_p, db_record_p, POINTER(bd_addr)]
    esl_key_lib_get_bind_address.restype = sl_status_t
    break

# esl_key_lib.h: 406
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_long_term_key", "cdecl"):
        continue
    esl_key_lib_get_long_term_key = _lib.get("esl_key_lib_get_long_term_key", "cdecl")
    esl_key_lib_get_long_term_key.argtypes = [db_record_p, POINTER(aes_key_128)]
    esl_key_lib_get_long_term_key.restype = sl_status_t
    break

# esl_key_lib.h: 420
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_identity_key", "cdecl"):
        continue
    esl_key_lib_get_identity_key = _lib.get("esl_key_lib_get_identity_key", "cdecl")
    esl_key_lib_get_identity_key.argtypes = [db_record_p, POINTER(aes_key_128)]
    esl_key_lib_get_identity_key.restype = sl_status_t
    break

# esl_key_lib.h: 433
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_ap_key_material", "cdecl"):
        continue
    esl_key_lib_get_ap_key_material = _lib.get("esl_key_lib_get_ap_key_material", "cdecl")
    esl_key_lib_get_ap_key_material.argtypes = [db_record_p, sl_bt_ead_key_material_p]
    esl_key_lib_get_ap_key_material.restype = sl_status_t
    break

# esl_key_lib.h: 447
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_response_key_material", "cdecl"):
        continue
    esl_key_lib_get_response_key_material = _lib.get("esl_key_lib_get_response_key_material", "cdecl")
    esl_key_lib_get_response_key_material.argtypes = [db_record_p, sl_bt_ead_key_material_p]
    esl_key_lib_get_response_key_material.restype = sl_status_t
    break

# esl_key_lib.h: 466
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_delete_record_by_ble_address", "cdecl"):
        continue
    esl_key_lib_delete_record_by_ble_address = _lib.get("esl_key_lib_delete_record_by_ble_address", "cdecl")
    esl_key_lib_delete_record_by_ble_address.argtypes = [db_handle_p, POINTER(bd_addr)]
    esl_key_lib_delete_record_by_ble_address.restype = sl_status_t
    break

# esl_key_lib.h: 482
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_delete_record_by_esl_address", "cdecl"):
        continue
    esl_key_lib_delete_record_by_esl_address = _lib.get("esl_key_lib_delete_record_by_esl_address", "cdecl")
    esl_key_lib_delete_record_by_esl_address.argtypes = [db_handle_p, esl_address_t]
    esl_key_lib_delete_record_by_esl_address.restype = sl_status_t
    break

# esl_key_lib.h: 495
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_bind_address_by_ble_address", "cdecl"):
        continue
    esl_key_lib_get_bind_address_by_ble_address = _lib.get("esl_key_lib_get_bind_address_by_ble_address", "cdecl")
    esl_key_lib_get_bind_address_by_ble_address.argtypes = [db_handle_p, POINTER(bd_addr), POINTER(bd_addr)]
    esl_key_lib_get_bind_address_by_ble_address.restype = sl_status_t
    break

# esl_key_lib.h: 509
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_bind_address_by_esl_address", "cdecl"):
        continue
    esl_key_lib_get_bind_address_by_esl_address = _lib.get("esl_key_lib_get_bind_address_by_esl_address", "cdecl")
    esl_key_lib_get_bind_address_by_esl_address.argtypes = [db_handle_p, esl_address_t, POINTER(bd_addr)]
    esl_key_lib_get_bind_address_by_esl_address.restype = sl_status_t
    break

# sl_status.h: 48
try:
    SL_STATUS_SPACE_MASK = (sl_status_t (ord_if_char(0xFF00))).value
except:
    pass

# sl_status.h: 50
try:
    SL_STATUS_GENERIC_SPACE = (sl_status_t (ord_if_char(0x0000))).value
except:
    pass

# sl_status.h: 52
try:
    SL_STATUS_PLATFORM_1_SPACE = (sl_status_t (ord_if_char(0x0100))).value
except:
    pass

# sl_status.h: 53
try:
    SL_STATUS_PLATFORM_2_SPACE = (sl_status_t (ord_if_char(0x0200))).value
except:
    pass

# sl_status.h: 54
try:
    SL_STATUS_HARDWARE_SPACE = (sl_status_t (ord_if_char(0x0300))).value
except:
    pass

# sl_status.h: 56
try:
    SL_STATUS_BLUETOOTH_SPACE = (sl_status_t (ord_if_char(0x0400))).value
except:
    pass

# sl_status.h: 57
try:
    SL_STATUS_BLUETOOTH_MESH_SPACE = (sl_status_t (ord_if_char(0x0500))).value
except:
    pass

# sl_status.h: 58
try:
    SL_STATUS_CAN_CANOPEN_SPACE = (sl_status_t (ord_if_char(0x0600))).value
except:
    pass

# sl_status.h: 59
try:
    SL_STATUS_CONNECT_SPACE = (sl_status_t (ord_if_char(0x0700))).value
except:
    pass

# sl_status.h: 60
try:
    SL_STATUS_NET_SUITE_SPACE = (sl_status_t (ord_if_char(0x0800))).value
except:
    pass

# sl_status.h: 61
try:
    SL_STATUS_THREAD_SPACE = (sl_status_t (ord_if_char(0x0900))).value
except:
    pass

# sl_status.h: 62
try:
    SL_STATUS_USB_SPACE = (sl_status_t (ord_if_char(0x0A00))).value
except:
    pass

# sl_status.h: 63
try:
    SL_STATUS_WIFI_SPACE = (sl_status_t (ord_if_char(0x0B00))).value
except:
    pass

# sl_status.h: 64
try:
    SL_STATUS_ZIGBEE_SPACE = (sl_status_t (ord_if_char(0x0C00))).value
except:
    pass

# sl_status.h: 65
try:
    SL_STATUS_Z_WAVE_SPACE = (sl_status_t (ord_if_char(0x0D00))).value
except:
    pass

# sl_status.h: 67
try:
    SL_STATUS_GECKO_OS_1_SPACE = (sl_status_t (ord_if_char(0x0E00))).value
except:
    pass

# sl_status.h: 68
try:
    SL_STATUS_GECKO_OS_2_SPACE = (sl_status_t (ord_if_char(0x0F00))).value
except:
    pass

# sl_status.h: 70
try:
    SL_STATUS_BLUETOOTH_CTRL_SPACE = (sl_status_t (ord_if_char(0x1000))).value
except:
    pass

# sl_status.h: 71
try:
    SL_STATUS_BLUETOOTH_ATT_SPACE = (sl_status_t (ord_if_char(0x1100))).value
except:
    pass

# sl_status.h: 72
try:
    SL_STATUS_BLUETOOTH_SMP_SPACE = (sl_status_t (ord_if_char(0x1200))).value
except:
    pass

# sl_status.h: 73
try:
    SL_STATUS_BLUETOOTH_MESH_FOUNDATION_SPACE = (sl_status_t (ord_if_char(0x1300))).value
except:
    pass

# sl_status.h: 75
try:
    SL_STATUS_WISUN_SPACE = (sl_status_t (ord_if_char(0x1400))).value
except:
    pass

# sl_status.h: 77
try:
    SL_STATUS_COMPUTE_SPACE = (sl_status_t (ord_if_char(0x1500))).value
except:
    pass

# sl_status.h: 85
try:
    SL_STATUS_OK = (sl_status_t (ord_if_char(0x0000))).value
except:
    pass

# sl_status.h: 86
try:
    SL_STATUS_FAIL = (sl_status_t (ord_if_char(0x0001))).value
except:
    pass

# sl_status.h: 89
try:
    SL_STATUS_INVALID_STATE = (sl_status_t (ord_if_char(0x0002))).value
except:
    pass

# sl_status.h: 90
try:
    SL_STATUS_NOT_READY = (sl_status_t (ord_if_char(0x0003))).value
except:
    pass

# sl_status.h: 91
try:
    SL_STATUS_BUSY = (sl_status_t (ord_if_char(0x0004))).value
except:
    pass

# sl_status.h: 92
try:
    SL_STATUS_IN_PROGRESS = (sl_status_t (ord_if_char(0x0005))).value
except:
    pass

# sl_status.h: 93
try:
    SL_STATUS_ABORT = (sl_status_t (ord_if_char(0x0006))).value
except:
    pass

# sl_status.h: 94
try:
    SL_STATUS_TIMEOUT = (sl_status_t (ord_if_char(0x0007))).value
except:
    pass

# sl_status.h: 95
try:
    SL_STATUS_PERMISSION = (sl_status_t (ord_if_char(0x0008))).value
except:
    pass

# sl_status.h: 96
try:
    SL_STATUS_WOULD_BLOCK = (sl_status_t (ord_if_char(0x0009))).value
except:
    pass

# sl_status.h: 97
try:
    SL_STATUS_IDLE = (sl_status_t (ord_if_char(0x000A))).value
except:
    pass

# sl_status.h: 98
try:
    SL_STATUS_IS_WAITING = (sl_status_t (ord_if_char(0x000B))).value
except:
    pass

# sl_status.h: 99
try:
    SL_STATUS_NONE_WAITING = (sl_status_t (ord_if_char(0x000C))).value
except:
    pass

# sl_status.h: 100
try:
    SL_STATUS_SUSPENDED = (sl_status_t (ord_if_char(0x000D))).value
except:
    pass

# sl_status.h: 101
try:
    SL_STATUS_NOT_AVAILABLE = (sl_status_t (ord_if_char(0x000E))).value
except:
    pass

# sl_status.h: 102
try:
    SL_STATUS_NOT_SUPPORTED = (sl_status_t (ord_if_char(0x000F))).value
except:
    pass

# sl_status.h: 103
try:
    SL_STATUS_INITIALIZATION = (sl_status_t (ord_if_char(0x0010))).value
except:
    pass

# sl_status.h: 104
try:
    SL_STATUS_NOT_INITIALIZED = (sl_status_t (ord_if_char(0x0011))).value
except:
    pass

# sl_status.h: 105
try:
    SL_STATUS_ALREADY_INITIALIZED = (sl_status_t (ord_if_char(0x0012))).value
except:
    pass

# sl_status.h: 106
try:
    SL_STATUS_DELETED = (sl_status_t (ord_if_char(0x0013))).value
except:
    pass

# sl_status.h: 107
try:
    SL_STATUS_ISR = (sl_status_t (ord_if_char(0x0014))).value
except:
    pass

# sl_status.h: 108
try:
    SL_STATUS_NETWORK_UP = (sl_status_t (ord_if_char(0x0015))).value
except:
    pass

# sl_status.h: 109
try:
    SL_STATUS_NETWORK_DOWN = (sl_status_t (ord_if_char(0x0016))).value
except:
    pass

# sl_status.h: 110
try:
    SL_STATUS_NOT_JOINED = (sl_status_t (ord_if_char(0x0017))).value
except:
    pass

# sl_status.h: 111
try:
    SL_STATUS_NO_BEACONS = (sl_status_t (ord_if_char(0x0018))).value
except:
    pass

# sl_status.h: 114
try:
    SL_STATUS_ALLOCATION_FAILED = (sl_status_t (ord_if_char(0x0019))).value
except:
    pass

# sl_status.h: 115
try:
    SL_STATUS_NO_MORE_RESOURCE = (sl_status_t (ord_if_char(0x001A))).value
except:
    pass

# sl_status.h: 116
try:
    SL_STATUS_EMPTY = (sl_status_t (ord_if_char(0x001B))).value
except:
    pass

# sl_status.h: 117
try:
    SL_STATUS_FULL = (sl_status_t (ord_if_char(0x001C))).value
except:
    pass

# sl_status.h: 118
try:
    SL_STATUS_WOULD_OVERFLOW = (sl_status_t (ord_if_char(0x001D))).value
except:
    pass

# sl_status.h: 119
try:
    SL_STATUS_HAS_OVERFLOWED = (sl_status_t (ord_if_char(0x001E))).value
except:
    pass

# sl_status.h: 120
try:
    SL_STATUS_OWNERSHIP = (sl_status_t (ord_if_char(0x001F))).value
except:
    pass
